--- a/index.html
+++ b/index.html
@@ -115,10 +115,13 @@
       padding: 22px;
       border: 1px solid #e8ebf5;
       box-shadow: 0 10px 28px rgba(0,0,0,.06);
+      display: flex;
+      flex-direction: column;
+      min-height: 280px;
     }
 
     .card h3 { color: var(--purple); font-size: 20px; margin-bottom: 6px; }
-    .card p { color: var(--muted); margin-bottom: 16px; }
+    .card p { color: var(--muted); margin-bottom: 16px; flex-grow: 1; }
 
     .dl-live {
       display: inline-block; background: var(--blue); color: #fff;
